--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -3,4 +3,10 @@ api_platform:
         api_keys:
             JWT:
                 name: Authorization
-                type: header
+                type: header 
+            # formats:
+            #     json:     ['application/json']
+            #     jsonld:   ['application/ld+json']
+            #     jsonapi:  ['application/vnd.api+json']
+            #     html:     ['text/html']
+            #     csv:      ['text/csv']
