--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -4,9 +4,8 @@ api_platform:
             JWT:
                 name: Authorization
                 type: header 
-            # formats:
-            #     json:     ['application/json']
-            #     jsonld:   ['application/ld+json']
-            #     jsonapi:  ['application/vnd.api+json']
-            #     html:     ['text/html']
-            #     csv:      ['text/csv']
+    formats:
+        jsonld:   ['application/ld+json']
+        json:     ['application/json']
+        multipart: ['multipart/form-data']
+        html:     ['text/html']
