New routes management

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -42,7 +42,7 @@ security:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
         # - { path: ^/api/offers/, roles: PUBLIC_ACCESS }
         - { path: ^/api/users/, roles: PUBLIC_ACCESS }
-        # - { path: ^/api/offers, roles: PUBLIC_ACCESS }
+        - { path: ^/api/offers, roles: PUBLIC_ACCESS }
         - { path: ^/api/, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api, roles: PUBLIC_ACCESS }
         - { path: ^/signup, roles: PUBLIC_ACCESS }
