--- a/composer.json
+++ b/composer.json
@@ -7,16 +7,16 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/doctrine-orm": "^4.1.21",
-        "api-platform/symfony": "^4.1.21",
-        "doctrine/dbal": "^3.10.1",
-        "doctrine/doctrine-bundle": "^2.15.1",
+        "api-platform/doctrine-orm": "^4.1.23",
+        "api-platform/symfony": "^4.1.23",
+        "doctrine/dbal": "^3.10.2",
+        "doctrine/doctrine-bundle": "^2.16.1",
         "doctrine/doctrine-migrations-bundle": "^3.4.2",
         "doctrine/orm": "^3.5.2",
         "lexik/jwt-authentication-bundle": "^3.1.1",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.6.3",
-        "phpstan/phpdoc-parser": "^2.2",
+        "phpstan/phpdoc-parser": "^2.3",
         "symfony/asset": "7.3.*",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
@@ -92,10 +92,12 @@
     "require-dev": {
         "hautelook/alice-bundle": "^2.15.1",
         "phpstan/phpstan": "^2.1.22",
-        "phpstan/phpstan-doctrine": "^2.0.4",
-        "phpstan/phpstan-symfony": "^2.0.7",
-        "phpunit/phpunit": "^11.5.35",
-        "rector/rector": "^2.1.4",
+        "phpstan/phpstan-doctrine": "^2.0.5",
+        "phpstan/phpstan-symfony": "^2.0.8",
+        "phpunit/phpunit": "^11.5.36",
+        "rector/rector": "^2.1.6",
+        "symfony/browser-kit": "7.3.*",
+        "symfony/http-client": "7.3.*",
         "symfony/maker-bundle": "^1.64",
         "symplify/easy-coding-standard": "^12.5.24"
     }
