--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -40,9 +40,10 @@ security:
     # Note: Only the *first* access control that matches will be used
     access_control:
         - { path: ^/api/login, roles: PUBLIC_ACCESS }
-        # - { path: ^/api/offers/, roles: PUBLIC_ACCESS }
         - { path: ^/api/users/, roles: PUBLIC_ACCESS }
         - { path: ^/api/offers, roles: PUBLIC_ACCESS }
+        - { path: ^/api/offers/\d+, roles: PUBLIC_ACCESS }
+        - { path: ^/api/vehicles/\d+/pictures, roles: PUBLIC_ACCESS }
         - { path: ^/api/, roles: IS_AUTHENTICATED_FULLY }
         - { path: ^/api, roles: PUBLIC_ACCESS }
         - { path: ^/signup, roles: PUBLIC_ACCESS }
