--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -9,6 +9,7 @@ security:
             entity:
                 class: App\Entity\User
                 property: mail
+        # used to reload user from session & other features (e.g. switch_user)
     
     firewalls:
         dev:
