--- a/.env
+++ b/.env
@@ -31,6 +31,7 @@ DATABASE_URL=`mysql://${MYSQL_USER}:${MYSQL_PASSWORD}@${MYSQL_HOST}:${MYSQL_PORT
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^http?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ALLOW_ORIGIN='^(https://bikedrivers-frontend-v1-0-1-1.onrender.com|http?://(localhost|127\.0\.0\.1))(:[0-9]+)?$'
+# CORS_ALLOW_ORIGIN='^http?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
 
