--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,9 +3,9 @@ name: BikeDrivers API Deployment
 
 on:
   push:
-    branches: [ "main", "testsAndQuality" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "testsAndQuality" ]
+    branches: [ "main" ]
 
 jobs:
   build:
