--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -40,7 +40,7 @@ jobs:
 
       # Defining the database URL in the .env file
       - name: Update DATABASE_URL env var
-        run: sed -i 's/DATABASE_URL=.*/DATABASE_URL="mysql:\/\/root:@127.0.0.1:3306\/symfony_api?serverVersion=8.0.43"/' .env.test
+        run: sed -i 's/DATABASE_URL=.*/DATABASE_URL="mysql:\/\/root:@127.0.0.1:3306\/bikedrivers_api?serverVersion=8.0.43"/' .env.test
 
       # Generate tokens keypair
       - name: Generate keypair
