--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -2,9 +2,9 @@ name: BikeDrivers Backend Quality assurance
 
 on:
   push:
-    branches: [ "main", "testAndQuality-2" ]
+    branches: [ "main" ]
   pull_request:
-    branches: [ "main", "testAndQuality-2" ]
+    branches: [ "main" ]
 
 jobs:
   quality:
