--- a/.dockerignore
+++ b/.dockerignore
@@ -12,6 +12,7 @@
 
 ###> lexik/jwt-authentication-bundle ###
 /config/jwt/*.pem
+lexik_jwt_authentication.yaml
 ###< lexik/jwt-authentication-bundle ###
 
 composer.lock
