--- a/.env
+++ b/.env
@@ -34,3 +34,7 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/bikedrivers_api?serverVersion=8.0.32&
 CORS_ALLOW_ORIGIN='https://bikedrivers-frontend-v1-0-1-1.onrender.com'
 # CORS_ALLOW_ORIGIN='^http?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=
