--- a/bikedrivers_lauching/docker-compose.yaml
+++ b/bikedrivers_lauching/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
       - mysql
     volumes:
       - ./backup/migrations:/bikedrivers/migrations/
+      - ./backup/media:/bikedrivers/public/media/
 
       # Lancer le frontend
   bikedrivers-frontend:
