--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,6 +28,7 @@ services:
       - mysql
     volumes:
       - ./backup/migrations:/bikedrivers/migrations/
+      - ./backup/media:/bikedrivers/public/media/
 
 
 volumes:
