Deploy process changed

--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -1,10 +1,13 @@
 name: BikeDrivers Backend Quality assurance
 
 on:
+  workflow_call:
   push:
-    branches: [ "main" ]
+    branches-ignore:
+      - [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches-ignore:
+      - [ "main" ]
 
 jobs:
   quality:
