--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -4,11 +4,21 @@ name: BikeDrivers API Deployment
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
 
 jobs:
-  build:
+  audit:
+    uses: './.github/workflows/audit.yaml'
+
+  quality:
+    needs: [audit]
+    uses: './.github/workflows/quality.yaml'
+
+  tests:
+    needs: [quality]
+    uses: './.github/workflows/tests.yaml'
+
+  deploy:
+    needs: [tests]
     runs-on: ubuntu-latest
 
     steps:
