--- a/.github/workflows/audit.yaml
+++ b/.github/workflows/audit.yaml
@@ -4,10 +4,10 @@ on:
   workflow_call:
   push:
     branches-ignore:
-      - [ "main" ]
+      - main
   pull_request:
     branches-ignore:
-      - [ "main" ]
+      - main
 
 jobs:
   audit:
