--- a/bikedrivers_lauching/docker-compose.yaml
+++ b/bikedrivers_lauching/docker-compose.yaml
@@ -21,7 +21,7 @@ services:
     # Déclaration des ports du container
     environment:
       CORS_ALLOW_ORIGIN: '^http?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
-      DATABASE_URL: 'mysql://root:@mysql:3306/symfony_api?serverVersion=8.0.32&charset=utf8mb4'
+      DATABASE_URL: 'mysql://root:@mysql:3306/bikedrivers_api?serverVersion=8.0.32&charset=utf8mb4'
     ports:
       - 8000:8000
     restart: always
