--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,14 +22,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # The action that uses transfers your directories and files in the runner
       - uses: actions/checkout@v3
 
+      # Connection to my Docker account
       - name: Connexion à DockerHub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USER }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Image build and Image push on my DockerHub account
+      # The image is based on the configuration of my Dockerfile
       - name: Build de l'image docker contenant le contenu du dépôt
         id: docker_build
         uses: docker/build-push-action@v2
@@ -39,5 +43,6 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USER }}/bikedrivers-api:v1.0.1
 
+      # Triggering the deploy
       - name: Trigger a the deploy
         run: curl ${{ secrets.TRIGGER_DEPLOY_URL }}
